Revision history for libapreq-1

=over 4

=item 1.33

require Apache::Test 1.13 to run perl tests (need() was added at that
version) [Stas]

Fix `strEQ' redefined warnings in the perl build [Stas]

Upgrade license to the Apache License Version 2.0. [davidw, joes]

=item 1.32

Fix mfd's Content-Type parser to deal with Opera 7.2's extra attributes.
For details see

  http://marc.theaimsgroup.com/?l=apreq-dev&m=106606052700407&w=2

Bug first reported by Sven Geisler [joes].

=item 1.31 - ongoing

added a proper implementation of the ithreads support. At the same
time it should resolve the problem with perl 5.8.2 under threaded
applications, since it no longer relies on the implicit context and
passes aTHX around. [Stas]

=item 1.30 - September 27, 2003

libapreq-1.3 is released.

=item 1.25 - August 23, 2003

Michael G. Schwern's "play it safe" patch to c/Makefile.PL
(applied patch submitted by Steve Hay). See 

  http://marc.theaimsgroup.com/?l=perl5-porters&m=105981649201380&w=2
  http://marc.theaimsgroup.com/?l=apreq-dev&m=106146287323705&w=2

for details. [joes]

=item 1.24 - August 23, 2003

Applied Steve Hay's Request.pm doc patch explaining the tempnam()
dependence for C<Apache::Request::new()>'s TEMP_DIR option. [joes]

=item 1.23 - July 10, 2003

Applied Graham Clark's patch to cleanup apache_request.h macros.
Added missing doc credits for Steve Hay in Request.pm. [joes]

=item 1.22 - July 5, 2003

Open uploaded files with binary mode (relevant for Perl > 5.7),
so as to be able to get the correct sizes on systems where such
a mode makes a difference. Thanks to Steve Hay for first pointing
out this problem. [randyk]

=item 1.21 - June 25, 2003

Fix memory access problem with TEMP_DIR - see
http://marc.theaimsgroup.com/?l=apreq-dev&m=105647058517842&w=2
Thanks to Jay Buffington for the spot.  [joes]

=item 1.2 - June 19, 2003

libapreq-1.2 released.

=item 1.16 - June 19, 2003

Updated INSTALL & README documents to explain how to configure the tests.